[tool.poetry]
name = "pow-blockchain"
version = "0.1.0"
description = ""
authors = ["wain_m1 <vokash3@yandex.ru>"]
readme = "README.md"
packages = [{include = "pow_blockchain"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
